Check and fix IE6~11
[15 commits squashed]

Align and resize footer-top link

[MAPDEV157]

Remove test copy

[MAPDEV157]

Add IE6 stylesheets

[MAPDEV157]

Change test for 'other' to be more defined

Previously tested on occurence of space in value, now
checks for string ' other'

[MAPDEV157]

Add IE7-specific stylesheet

Add link tag to base, create IE7-specific stylesheet, extend override styles
previously only for IE6.

[MAPDEV157]

Add IE7-specific stylesheet

[MAPDEV157]

Remove duplicate SASS dependencies imports

A fair few of the GOVUK base styles were being duplicated in the resulting
CSS output. Most have now been sorted.

[MAPDEV157]

Fix small CSS issues and JS errors

- IE6 has JS enabled
- Form elements tweaks to prevent 100% width overspill
- Add decimal roudning to expenses entries

[MAPDEV157]

Nudge legend element left

[MAPDEV157]

Add IE8 stylesheet

Tweak some form styles

[MAPDEV157]

Add IE8 stylesheet

[MAPDEV157]

Tweak IE8 styles

Extend IE6/7 styles to also trigger on IE8, tweak/add IE8-specific
styles

[MAPDEV157]

Add details JS plugin/shim

This plugin provides default details/summary functionality for
browsers that don't support it by default (IE6/7/8/9)

[MAPDEV157]

Make success message font bigger

Flash message standard copy (p) was a tad small.

[MAPDEV157]

Fix errorlist styling when not in label tag

Error message not caontained within a label tag were rendered black
and with too big a top and bottom margin

[MAPDEV157]

--- a/manchester_traffic_offences/assets-src/stylesheets/_main.scss
+++ b/manchester_traffic_offences/assets-src/stylesheets/_main.scss
@@ -110,6 +110,7 @@ Main styles
 	.block-label {
 		@include core-19;
 		padding: 1em;
+		margin-right: 0;
 
 		.important {
 			margin-top: 0;
@@ -152,7 +153,8 @@ Main styles
 
 /*== Complete screen ===============================================*/
 
-.success-header {
+
+#content .success-header {
 	margin: 2em 0;
 	padding: 40px;
 	background: $turquoise;
